<resources>
    <string name="app_name">FirebaseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_phone_number_to_receive_otp">Enter phone number to receive OTP</string>
    <string name="_91_xxxxxxxxxx">+91-XXXXXXXXXX</string>
    <string name="send_otp">Send OTP</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP</string>
    <string name="resend_otp_again">RESEND OTP AGAIN</string>
    <string name="otp_verification">OTP verification</string>
    <string name="please_enter_otp_sent_to_you">Please enter OTP sent to you</string>
    <string name="verify_login">Verify Login</string>
    <string name="vCodeSharedPrefName">firebaseapp.verifications_code</string>
    <string name="login_successful">Login Successful</string>
    <string name="logout">Logout</string>
</resources>